kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecsdemo-nodejs
  namespace: default
spec:
  selector:
    app: ecsdemo-nodejs
  ports:
   -  protocol: TCP
      port: 80
